Add Tagline to home

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,7 +1,7 @@
 body > header {
   display: flex;
+  flex-wrap: wrap;
   font-size: ($ratio-text-small * 1rem);
-  height: ($ratio-text-small * $line-height-large * 1rem);
   line-height: $line-height-large;
   margin: $margin auto $margin-large;
   max-width: $width-large;
@@ -35,3 +35,4 @@ body > header svg {
 
 @import "header/logo";
 @import "header/navigation";
+@import "header/tagline";
