--- a/src/css/header/_logo.scss
+++ b/src/css/header/_logo.scss
@@ -1,10 +1,9 @@
 body > header h1 {
   flex-grow: 1;
   font-size: inherit;
-  height: 100%;
+  height: ($ratio-text-small * $line-height-large * 1rem);
   line-height: inherit;
-  margin-bottom: $margin-small;
-  margin-top: 0;
+  margin-bottom: 0;
   text-transform: uppercase;
 
   @media (min-width: $breakpoint-huge) {
