--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -1,9 +1,10 @@
 // Navigation
 body > header nav {
-  height: 100%;
+  height: ($ratio-text-small * $line-height-large * 1rem);
 
   @media (min-width: $breakpoint-huge) {
     flex-grow: 1;
+    width: 100%;
   }
 }
 
