--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -49,7 +49,8 @@ hr {
   box-sizing: content-box;
   clear: both;
   color: $color-fg-light;
-  font-size: ($ratio-text-small * 1rem);
+  font-size: percentage($ratio-text-huge);
+  font-weight: bolder;
   height: 1em;
   line-height: 1;
   margin: $margin-large 0;
@@ -57,7 +58,7 @@ hr {
 }
 
 hr::before {
-  content: "✖ \a0\a0\a0✖ \a0\a0\a0✖";
+  content: "*\a0\a0\a0*\a0\a0\a0*";
 }
 
 pre {
