Use rem for sizing texts

--- a/src/css/header/_tagline.scss
+++ b/src/css/header/_tagline.scss
@@ -1,6 +1,6 @@
 // Tagline
 body > header p {
-  font-size: percentage($ratio-text-huge);
+  font-size: ($ratio-text-large * 1rem);
   line-height: $line-height-small;
   margin-bottom: 0;
   margin-top: $margin-large;
