--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,7 +1,7 @@
 // The document element
 html {
   font-family: $font-stack-system-ui;
-  font-size: percentage($ratio-text);
+  font-size: 16px;
   line-height: $line-height;
 
   @media (min-width: $breakpoint-large) {
@@ -49,7 +49,7 @@ hr {
   box-sizing: content-box;
   clear: both;
   color: $color-fg-light;
-  font-size: percentage($ratio-text-huge);
+  font-size: ($ratio-text-huge * 1rem);
   font-weight: bolder;
   height: 1em;
   line-height: 1;
