--- a/src/css/header/_tagline.scss
+++ b/src/css/header/_tagline.scss
@@ -1,6 +1,7 @@
 // Tagline
 body > header p {
-  font-size: ($ratio-text-large * 1rem);
+  font-size: ($ratio-text-huge * 1rem);
+  font-weight: lighter;
   line-height: $line-height-small;
   margin-bottom: 0;
   margin-top: $margin-large;
