Use rem unit for queries, % for text size

--- a/src/css/var/_media-query.scss
+++ b/src/css/var/_media-query.scss
@@ -1,3 +1,11 @@
+// Breakpoint
+$width-scrollbar: 2rem;
+$breakpoint-large: (($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text + $width-scrollbar);
+$breakpoint-huge: (($width-blank + $width-huge-outer + $width-blank) * $ratio-text-large / $ratio-text + $width-scrollbar);
+$breakpoint-fhd-up-width: 121rem;
+$breakpoint-fhd-up-height: 68rem;
+
+// Query
 @media (min-width: $breakpoint-large) {
   /* Large screen */
 }
