--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,15 +1,15 @@
 // The document element
 html {
   font-family: $font-stack-system-ui;
-  font-size: 16px;
+  font-size: percentage(1);
   line-height: $line-height;
 
   @media (min-width: $breakpoint-large) {
-    font-size: ($ratio-text-root-large * 16px);
+    font-size: percentage($ratio-text-root-large);
   }
 
   @media (min-width: $breakpoint-huge) {
-    font-size: ($ratio-text-large * 16px);
+    font-size: percentage($ratio-text-large);
   }
 
   @media (min-width: $breakpoint-fhd-up-width) and (min-height: $breakpoint-fhd-up-height) {
