Increase base padding size

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -263,7 +263,7 @@ figure > table {
 th,
 td {
   border-top: $width-border-small solid $color-fg-light;
-  padding: $padding-large;
+  padding: $padding;
   vertical-align: top;
   white-space: nowrap;
 }
