--- a/src/css/footer/_links.scss
+++ b/src/css/footer/_links.scss
@@ -6,7 +6,7 @@ body > footer ul {
 
 body > footer ul li {
   display: block;
-  margin-left: $padding-large;
+  margin-left: $padding;
 
   @media (min-width: $breakpoint-huge) {
     margin-left: 0;
