--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -10,7 +10,7 @@ $width-border: ($margin-small / $ratio / $ratio / $ratio);
 $width-border-small: ($width-border / $ratio);
 
 // Padding
-$padding: ($margin-small / $ratio);
+$padding: $margin-small;
 $padding-large: ($padding * $ratio);
 
 // Main Component
