--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -20,7 +20,7 @@ body > header nav ul {
 body > header nav ul li {
   display: block;
   height: 100%;
-  margin-right: $padding-large;
+  margin-right: $padding;
 }
 
 body > header nav ul li:last-child {
