Increase Navigation/Links item gutter on large screen

--- a/src/css/footer/_links.scss
+++ b/src/css/footer/_links.scss
@@ -8,6 +8,10 @@ body > footer ul li {
   display: block;
   margin-left: $padding;
 
+  @media (min-width: $breakpoint-large) {
+    margin-left: $padding-large;
+  }
+
   @media (min-width: $breakpoint-huge) {
     margin-left: 0;
     margin-right: $padding-large;
