--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -21,6 +21,10 @@ body > header nav ul li {
   display: block;
   height: 100%;
   margin-right: $padding;
+
+  @media (min-width: $breakpoint-large) {
+    margin-right: $padding-large;
+  }
 }
 
 body > header nav ul li:last-child {
