--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -44,6 +44,7 @@
           <ul class="flat">
             <li><a href="https://gist.github.com/hail2u/c86ee1467cd132b1c011">ellipsis-title.js</a></li>
             <li><a href="https://gist.github.com/hail2u/8d96d6ed7fc5995f6e7c292dfef1fe6c">reldate.js</a></li>
+            <li><a href="https://gist.github.com/hail2u/50b54a682aa5bb69eef065f650f17909">site-search-focus.js</a></li>
             <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
           </ul>
         </section>
