Use https if possible

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -68,16 +68,16 @@
             <li><a href="https://developers.google.com/closure/compiler/">Closure Compiler</a></li>
             <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
             <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
-            <li><a href="http://git-scm.com/">Git</a></li>
+            <li><a href="https://git-scm.com/">Git</a></li>
             <li><a href="https://github.com/janl/mustache.js">mustache</a></li>
             <li><a href="https://github.com/kangax/html-minifier">HTMLMinifier</a></li>
-            <li><a href="http://www.imagemagick.org/">ImageMagick</a></li>
-            <li><a href="http://inkscape.org/">Inkscape</a></li>
+            <li><a href="https://www.imagemagick.org/">ImageMagick</a></li>
+            <li><a href="https://inkscape.org/">Inkscape</a></li>
             <li><a href="http://jpegclub.org/jpegtran/">jpegtran</a></li>
-            <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a></li>
+            <li><a href="https://daringfireball.net/projects/markdown/">Markdown</a></li>
             <li><a href="https://nodejs.org/">Node.js</a></li>
             <li><a href="http://optipng.sourceforge.net/">OptiPNG</a></li>
-            <li><a href="http://www.adobe.com/jp/products/photoshop.html">Photoshop</a></li>
+            <li><a href="https://www.adobe.com/jp/products/photoshop.html">Photoshop</a></li>
             <li><a href="https://pngquant.org/">pngquant</a></li>
             <li><a href="http://postcss.org/">PostCSS</a></li>
             <li><a href="https://github.com/hail2u/postcss-round-float">postcss-round-float</a></li>
