--- a/src/html/partial/head.mustache
+++ b/src/html/partial/head.mustache
@@ -7,6 +7,7 @@
   <title>{{^home}}{{short_title}} - {{/home}}{{site_title}}</title>
 
   <link href="{{canonical}}" rel="canonical">
+  {{#articles}}{{#isLatest}}<link href="{{link}}" rel="preload">{{/isLatest}}{{/articles}}
   <link href="/styles/main.min.css" media="screen" rel="stylesheet">
   <link href="/styles/print.min.css" media="print" rel="stylesheet">
 
