--- a/src/html/404.mustache
+++ b/src/html/404.mustache
@@ -8,11 +8,29 @@
 
     <style>
       :root {
-        background-color: hsl(45, 75%, 98%);
-        color: hsl(45, 5%, 10%);
+        background-color: hsl(0, 0%, 99%);
+        color: hsl(0, 0%, 11%);
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Yu Gothic UI", sans-serif;
         height: 100%;
         line-height: 1;
+      }
+
+      @media (min-width: 56.739rem) {
+        html {
+          font-size: 117.5%;
+        }
+      }
+
+      @media (min-width: 91.226rem) {
+        html {
+          font-size: 135%;
+        }
+      }
+
+      @media (min-width: 121rem) and (min-height: 68rem) {
+        html {
+          font-size: 1.25vw;
+        }
       }
 
       body {
@@ -26,43 +44,54 @@
       }
 
       a {
-        color: hsl(195, 75%, 25%);
+        color: inherit;
+        -webkit-text-decoration-color: hsl(0, 0%, 77%);
+        -moz-text-decoration-color: hsl(0, 0%, 77%);
+        text-decoration-color: hsl(0, 0%, 77%);
+        -webkit-text-decoration-skip: ink;
+        text-decoration-skip: ink;
+      }
+
+      a:visited {
+        color: hsl(0, 0%, 33%);
       }
 
       h1 {
-        font-size: 200%;
+        font-size: 1.7rem;
         font-weight: 400;
-        margin: 0 0 2rem;
+        margin: 0 0 1.7rem;
       }
 
       p {
         line-height: 1.7;
-        margin: 0 0 1rem;
+        margin: 0 0 1.7rem;
       }
 
       form {
-        margin: 0 0 3rem;
+        margin: 0 0 1.7rem;
         position: relative;
         text-align: left;
       }
 
       [name="q"] {
-        background-color: white;
-        border: 1px solid hsl(45, 10%, 75%);
+        -webkit-appearance: none;
+        background-color: hsl(0, 0%, 88%);
+        border: 0;
+        border-radius: 0;
         box-sizing: border-box;
         color: inherit;
         font-family: inherit;
         font-size: 100%;
         height: 2rem;
-        padding: 0 2rem 0 .25rem;
+        padding: 0 2rem 0 0.25rem;
         width: 74%;
       }
 
       [type="submit"] {
-        background-color: hsl(195, 75%, 25%);
+        background-color: hsl(0, 0%, 11%);
         border: 0;
         box-sizing: border-box;
-        color: white;
+        color: hsl(0, 0%, 99%);
         font-family: inherit;
         font-size: 100%;
         height: 2rem;
@@ -70,6 +99,10 @@
         position: absolute;
         right: 0;
         width: 25%;
+      }
+
+      footer p {
+        margin-bottom: 0;
       }
     </style>
   </head>
@@ -81,14 +114,14 @@
 
     <p>{{description}}</p>
 
-    <form action="https://duckduckgo.com/" role="search">
-      <input name="sites" type="hidden" value="{{domain}}">
-      <input name="q" placeholder="例: Blosxom" size="32" type="search">
+    <form action="https://www.google.com/search" role="search">
+      <input name="as_sitesearch" type="hidden" value="{{domain}}">
+      <input name="q" placeholder="例: Blosxom" required size="32" type="search" aria-label="キーワード">
       <input type="submit" value="Search">
     </form>
 
     <footer>
-      <p>または<a href="/">ホームページ</a>より最近の記事などから探してみてください。</p>
+      <p>または<a href="/">ホームページ</a>より最近の記事などから探してみてください。お問い合わせは<a href="mailto:hail2u@gmail.com">メール</a>でお願いします。</p>
     </footer>
   </body>
 </html>
