--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -1,5 +1,5 @@
-section * h1,
-article * h1 {
+body > main section * h1,
+body > main article * h1 {
   font-size: ($ratio-text-large * 1rem);
   margin-bottom: $margin-small;
   margin-top: $margin-huge;
