--- a/src/css/content/_footer.scss
+++ b/src/css/content/_footer.scss
@@ -1,4 +1,4 @@
-article > footer:first-child {
+body > main > article > footer:first-child {
   float: left;
   width: 100%;
 
@@ -12,6 +12,6 @@ article > footer:first-child {
   }
 }
 
-article > footer:first-child :last-child {
+body > main > article > footer:first-child :last-child {
   margin-bottom: 0;
 }
