--- a/src/css/content/_heading.scss
+++ b/src/css/content/_heading.scss
@@ -1,9 +1,9 @@
-main > section > h1,
-main > article > h1 {
+body > main > section > h1,
+body > main > article > h1 {
   font-size: ($ratio-text-huge * 1rem);
   margin-top: $margin-gargantuan;
 }
 
-main > *:first-child > h1:first-of-type {
+body > main > *:first-child > h1:first-of-type {
   margin-top: 0;
 }
