Inject on DOMContentLoaded

--- a/src/html/partial/head.mustache
+++ b/src/html/partial/head.mustache
@@ -11,7 +11,7 @@
   <link href="/styles/main.min.css" media="screen" rel="stylesheet">
   <link href="/styles/print.min.css" media="print" rel="stylesheet">
 
-  <script defer src="/scripts/main.min.js"></script>
+  <script async src="/scripts/main.min.js"></script>
 
   <meta content="{{card_type}}" name="twitter:card">
   <meta content="{{twitter_username}}" name="twitter:site">
