--- a/src/html/partial/head.mustache
+++ b/src/html/partial/head.mustache
@@ -8,8 +8,7 @@
 
   <link href="{{canonical}}" rel="canonical">
   {{#articles}}{{#isLatest}}<link href="{{link}}" rel="preload">{{/isLatest}}{{/articles}}
-  <link href="/styles/main.min.css" media="screen" rel="stylesheet">
-  <link href="/styles/print.min.css" media="print" rel="stylesheet">
+  <link href="/styles/main.min.css" rel="stylesheet">
 
   <script async src="/scripts/main.min.js"></script>
 
