--- a/src/css/var/_media-query.scss
+++ b/src/css/var/_media-query.scss
@@ -1,9 +1,9 @@
 // Breakpoint
 $width-scrollbar: 2rem;
-$breakpoint-large: (($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text + $width-scrollbar);
-$breakpoint-huge: (($width-blank + $width-huge-outer + $width-blank) * $ratio-text-large / $ratio-text + $width-scrollbar);
-$breakpoint-fhd-up-width: 121rem;
-$breakpoint-fhd-up-height: 68rem;
+$breakpoint-large: ((($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text + $width-scrollbar) / 1rem * 16px);
+$breakpoint-huge: ((($width-blank + $width-huge-outer + $width-blank) * $ratio-text-large / $ratio-text + $width-scrollbar) / 1rem * 16px);
+$breakpoint-fhd-up-width: 1921px;
+$breakpoint-fhd-up-height: 1081px;
 
 // Query
 @media (min-width: $breakpoint-large) {
