Use defer for ensuring DOMContentLoaded

--- a/src/html/partial/head.mustache
+++ b/src/html/partial/head.mustache
@@ -9,7 +9,7 @@
   {{#articles}}{{#isLatest}}<link href="{{link}}" rel="preload">{{/isLatest}}{{/articles}}
   <link href="/styles/main.min.css" rel="stylesheet">
 
-  <script async src="/scripts/main.min.js"></script>
+  <script defer src="/scripts/main.min.js"></script>
 
   <meta content="{{card_type}}" name="twitter:card">
   <meta content="{{twitter_username}}" name="twitter:site">
