Update line-height to fit explanation

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -66,7 +66,7 @@ pre {
   color: $color-fg-semilight;
   font-family: $font-stack-monospace;
   font-size: ($ratio-text-small * 1rem);
-  line-height: $line-height-small;
+  line-height: $line-height-pre;
   margin: 0 0 $margin;
   overflow: auto;
 
