--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -14,3 +14,5 @@ $line-height-small: ($line-height * 0.8);
 
 // Core
 $ratio-text-root-large: (($ratio-text-large - $ratio-text) / 2 + $ratio-text);
+
+$line-height-pre: (1 * $line-height * 2 / $ratio-text-small / 3);
